implemented equi-depth histograms to dramatically improve cardinality estimation for range predicates.